expression_grammar.txt
program:        line* EOF ;

line:           NUMBER statement (: statement)* ;
statement:      printStmt | endStmt ;
printStmt:      "PRINT" (expression (("," | ";") expression)*)? ;
endStmt:        "END" ;

expression:     equality ;
equality:       comparison (("#" | "<>" | "=") comparison)* ;
comparison:     addition ((">" | ">=" | "<" | "<=") addition)* ;
addition:       multiplication (("-" | "+") multiplication)* ;
multiplication: unary (("MOD" | "/" | "*") unary)* ;
unary:          ("NOT" | "-") unary
                primary ;
primary:        NUMBER | STRING
                "(" expression ")" ;
